# RunX

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-cn.md
etc/: agent.yml  controller.yml
script/: dependencies.sh  devenv.sh
src/agent/: CMakeLists.txt  app.cpp  app.h  configuration.h  error.cpp  error.h  main.cpp
src/agent/client/: client.cpp  client.h
src/agent/command/: auth_request.cpp  auth_request.h  auth_respond.cpp  auth_respond.h  command.h  operate_plugin_request.h  operate_plugin_respond.cpp  ping_request.cpp  ping_request.h  pong_request.cpp  pong_request.h  register_agent_respond.cpp  register_agent_respond.h
src/agent/controller/: controller.cpp  controller.h
src/core/: CMakeLists.txt  core.cpp  core.h
src/core/application/: config_file.h  (+17 more)
src/internal/: agent_id.cpp  agent_id.h  base.pb.cc  base.pb.h  base.proto  controller.cpp  controller.h  controller.pb.cc  controller.pb.h  controller.proto  controller_protocol.cpp  controller_protocol.h  error.cpp  error.h  protocol.cpp  protocol.h
src/server/: CMakeLists.txt  app.cpp  app.h  configuration.h  error.cpp  error.h  main.cpp
src/server/api/http/: server.cpp  server.h
src/server/controller/: CMakeLists.txt  app.cpp  app.h  configuration.h  controller.cpp  controller.h  error.cpp  error.h  main.cpp
src/server/controller/api/http/: server.cpp  server.h
src/server/controller/processor/: processor.h  register_agent_processor.cpp  register_agent_processor.h
src/server/controller/route/: agent_session.cpp  agent_session.h  route.cpp  route.h  synchronizer_client.cpp  synchronizer_client.h  synchronizer_server.cpp  synchronizer_server.h
src/server/transfer/: CMakeLists.txt  app.cpp  app.h  configuration.h  error.cpp  error.h  main.cpp  transfer.cpp  transfer.h
src/server/transfer/api/http/: server.cpp  server.h
(+62 files in other folders)
